# tic-tac-ai

./: .clang-format  CMakeLists.txt  README.md
src/: board.cpp  board.h  dumb_ai_player.cpp  dumb_ai_player.h  game.cpp  game.h  human_player.cpp  human_player.h  main.cpp  player.cpp  player.h  strategy_ai_player.cpp  strategy_ai_player.h  tree_ai_player.cpp  tree_ai_player.h
